fix align in photo-all page

--- a/gallery/public/gallery-static/css/style.css
+++ b/gallery/public/gallery-static/css/style.css
@@ -56,7 +56,6 @@ a img {
 	border:0;
 }
 
-
 .overlay {
 	background-color: #000;
 	opacity: .7;
@@ -256,6 +255,10 @@ a img {
 	border: 50px solid #EEE;
 	position: absolute;
 	z-index: 11;
+}
+
+.photoall-photo {
+	display: inline;
 }
 
 /* Page */
